// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expense summary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
     
  </h1>
</div>
`;

exports[`should correctly render expense summary with one expense 2`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $235,123,409.87
     
  </h1>
</div>
`;
